--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -6,14 +6,17 @@
     android:layout_height="match_parent"
     android:padding="12dp"
     android:orientation="vertical"
-    android:background="#F2FDE6"
+    android:background="#9BD3EC"
     tools:context=".ui.dashboard.BasketFragment">
 
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="36dp"
+      android:padding="0dp"
         android:layout_height="30dp"
+        android:src="@drawable/back"
         android:layout_marginStart="6dp"
+        android:scaleType="fitXY"
         android:contentDescription="Back"
         tools:ignore="TouchTargetSizeCheck"
        />
