--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -8,10 +8,12 @@
     android:background="@color/white"
     tools:context=".payment.PaymentFragment">
     <ImageButton
-        android:layout_width="87dp"
-        android:layout_height="99dp"
+        android:id="@+id/btn_back"
+        android:layout_marginTop="10dp"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
         android:layout_marginStart="6dp"
-        android:background="@drawable/bas"
+        android:background="@drawable/back"
         android:contentDescription="button_back"
         tools:ignore="YouchTargetSizeCheck" />
 
@@ -58,7 +60,38 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:src="@drawable/mbank"/>
+
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_paypal"
+        android:layout_width="148dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
+        app:cardBackgroundColor="@color/white"
+        android:layout_marginTop="19dp"
+        app:cardCornerRadius="26dp"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:src="@drawable/payapl"/>
+
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/o"
+        android:layout_width="148dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
+        app:cardBackgroundColor="@color/white"
+        android:layout_marginTop="19dp"
+        app:cardCornerRadius="26dp"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:src="@drawable/mastercard"/>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
